fixed img squish

--- a/assets/style/style_product_detail.css
+++ b/assets/style/style_product_detail.css
@@ -35,7 +35,7 @@ body {
 }
 
 .main_image img {
-    width: 95%;
+    max-width: 95%;
     max-height: 95%;
 }
 
